[gd_scene load_steps=7 format=2]

[ext_resource path="res://worlds/castle/door/door_right.png" type="Texture" id=1]
[ext_resource path="res://worlds/castle/door/door_down.png" type="Texture" id=2]
[ext_resource path="res://worlds/castle/door/door_left.png" type="Texture" id=3]
[ext_resource path="res://worlds/castle/door/door_up.png" type="Texture" id=4]
[ext_resource path="res://worlds/castle/door/door.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.00004
height = 42.0

[node name="door" type="Node2D"]
script = ExtResource( 5 )

[node name="DoorDown" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HB" type="Area2D" parent="DoorDown"]

[node name="CS" type="CollisionShape2D" parent="DoorDown/HB"]
position = Vector2( -2, 70 )
rotation = 4.71238
shape = SubResource( 1 )

[node name="DoorLeft" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="HB" type="Area2D" parent="DoorLeft"]

[node name="CS" type="CollisionShape2D" parent="DoorLeft/HB"]
position = Vector2( 151, 0 )
rotation = 3.14159
shape = SubResource( 1 )

[node name="DoorRight" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HB" type="Area2D" parent="DoorRight"]

[node name="CS" type="CollisionShape2D" parent="DoorRight/HB"]
position = Vector2( -151, -6 )
rotation = 3.14159
shape = SubResource( 1 )

[node name="DoorUp" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="HB" type="Area2D" parent="DoorUp"]

[node name="CS" type="CollisionShape2D" parent="DoorUp/HB"]
position = Vector2( 1, -72 )
rotation = 1.57079
shape = SubResource( 1 )

[connection signal="body_entered" from="DoorDown/HB" to="." method="door_down_entered"]
[connection signal="body_entered" from="DoorLeft/HB" to="." method="door_left_entered"]
[connection signal="body_entered" from="DoorRight/HB" to="." method="door_right_entered"]
[connection signal="body_entered" from="DoorUp/HB" to="." method="door_up_entered"]
